<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
        <!ENTITY app_name "Movie App">
        ]>
<resources>
    <string name="app_name">&app_name;</string>
    <string name="genre_selection_greeting">Welcome to &app_name;</string>
    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the movies</string>
    <string name="done_button">Done</string>
    <string name="upcoming_movie">Upcoming Movies</string>
    <string name="popular_movie">Popular Movies</string>
    <string name="menu_search">Search</string>
    <string name="menu_expand">Expand</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="main_actor">Main Actors</string>
    <string name="search">Search</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="next">&gt;&gt;</string>
    <string name="previous">&lt;&lt;</string>
    <string name="search_movie">Search movie</string>
</resources>
