<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.sun.movieapp.ui.searchmovie.PagingViewModel"/>
    </data>

    <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btnFirst"
                android:text="@string/first"
                android:layout_width="70dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnPrevious"
                android:text="@string/previous"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnOne"
                app:mutableText="@{viewModel.pageOne}"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnTwo"
                app:mutableText="@{viewModel.pageTwo}"
                app:mutableVisibility="@{viewModel.isTwoHidden}"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnThree"
                app:mutableText="@{viewModel.pageThree}"
                app:mutableVisibility="@{viewModel.isThreeHidden}"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnNext"
                android:text="@string/next"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnLast"
                android:text="@string/last"
                android:layout_width="70dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>
