<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.sun.movieapp.ui.moviedetail.MovieDetailViewModel"/>
    </data>

    <LinearLayout
            android:id="@+id/llMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.moviedetail.MovieDetailActivity"
            android:background="@android:color/black"
            app:setBackground="@{viewModel.getPosterPath()}"
            android:orientation="vertical">

        <WebView
                android:id="@+id/wvTrailer"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:id="@+id/svContainer">

                <LinearLayout
                        android:layout_margin="32dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:id="@+id/tvTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:mutableText="@{viewModel.getTitle()}"/>

                        <ImageView
                                android:id="@+id/imvStar"
                                android:src="@drawable/ic_star"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/imbLike"
                                app:layout_constraintBottom_toBottomOf="@+id/imbLike"/>

                        <TextView
                                android:id="@+id/tvRating"
                                app:mutableText="@{viewModel.getRating()}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                app:layout_constraintStart_toEndOf="@id/imvStar"
                                app:layout_constraintBottom_toBottomOf="@+id/imvStar"
                                app:layout_constraintTop_toTopOf="@+id/imvStar"/>

                        <ImageButton
                                android:id="@+id/imbLike"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/ic_unlike"
                                app:liked="@{viewModel.isLiked()}"
                                android:background="@android:color/transparent"
                                android:scaleType="fitCenter"
                                android:adjustViewBounds="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@android:color/darker_gray"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:id="@+id/tvOverviewLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/overview"
                                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:textSize="18sp"/>

                        <TextView
                                android:id="@+id/tvOverview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:justificationMode="inter_word"
                                app:mutableText="@{viewModel.getOverview()}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                app:layout_constraintTop_toBottomOf="@id/tvOverviewLabel"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:maxLines="10"/>

                        <TextView
                                android:id="@+id/tvReleaseDateLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/release_date"
                                android:layout_marginTop="10dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                app:layout_constraintTop_toBottomOf="@+id/tvOverview"
                                app:layout_constraintStart_toStartOf="parent"
                                android:textSize="18sp"/>

                        <TextView
                                android:id="@+id/tvReleaseDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:mutableText="@{viewModel.getReleaseDate()}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                app:layout_constraintBottom_toBottomOf="@+id/tvReleaseDateLabel"
                                app:layout_constraintTop_toTopOf="@+id/tvReleaseDateLabel"
                                app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@android:color/darker_gray"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:id="@+id/tvActorLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/main_actor"
                                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:textSize="18sp"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvActor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@id/tvActorLabel"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent">

                        </androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

    </LinearLayout>

</layout>

